[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/img/CoinsPortals/Coin.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/HUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/img/CoinsPortals/Portal.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/BKShatteredScore.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/img/HowToPlay/timer.png" type="Texture" id=5]
[ext_resource path="res://Assets/SoundFx/Level Songs/ClockSound.mp3" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0478058, 0.794837, 0.941406, 0.235294 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 170.0
margin_bottom = 322.0
custom_styles/panel = SubResource( 1 )

[node name="Coins" type="Sprite" parent="."]
position = Vector2( 33, 43 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CoinsCollectedTxt" type="Label" parent="."]
margin_left = 49.0
margin_top = 2.0
margin_right = 155.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 12, 23 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="Portals" type="Sprite" parent="."]
position = Vector2( 33, 163 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="PortalsCollectedTxt" type="Label" parent="."]
margin_left = 49.0
margin_top = 112.0
margin_right = 155.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="Time" type="Sprite" parent="."]
position = Vector2( 38, 270 )
scale = Vector2( 0.023, 0.02175 )
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TimeLeftTxt" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 49.0
margin_top = -79.0
margin_right = 155.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
uppercase = true

[node name="TimeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
